// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TextArea
    autoFocus={true}
    cols={2}
    maxlength={250}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Place text"
    rows={2}
    textAreaFunc={[Function]}
    transitionTiming={500}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.textarea
          autoFocus={undefined}
          cols={2}
          data-test-id="undefined-textarea"
          id="undefined-textarea"
          maxLength={250}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Place text"
          rows={2}
          title={undefined}
        />,
        <styled.label
          for="undefined-textarea"
        >
          250
        </styled.label>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoFocus": undefined,
          "cols": 2,
          "data-test-id": "undefined-textarea",
          "id": "undefined-textarea",
          "maxLength": 250,
          "onBlur": [Function],
          "onChange": [Function],
          "onFocus": [Function],
          "placeholder": "Place text",
          "rows": 2,
          "title": undefined,
        },
        "ref": "textArea",
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": 250,
          "for": "undefined-textarea",
        },
        "ref": null,
        "rendered": 250,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.textarea
            autoFocus={undefined}
            cols={2}
            data-test-id="undefined-textarea"
            id="undefined-textarea"
            maxLength={250}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Place text"
            rows={2}
            title={undefined}
          />,
          <styled.label
            for="undefined-textarea"
          >
            250
          </styled.label>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoFocus": undefined,
            "cols": 2,
            "data-test-id": "undefined-textarea",
            "id": "undefined-textarea",
            "maxLength": 250,
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "placeholder": "Place text",
            "rows": 2,
            "title": undefined,
          },
          "ref": "textArea",
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": 250,
            "for": "undefined-textarea",
          },
          "ref": null,
          "rendered": 250,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Heading renders properly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TextArea
    autoFocus={true}
    cols={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Place text"
    rows={2}
    textAreaFunc={[Function]}
    transitionTiming={500}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.textarea
          autoFocus={undefined}
          cols={2}
          data-test-id="undefined-textarea"
          id="undefined-textarea"
          maxLength={250}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Place text"
          rows={2}
          title={undefined}
        />,
        <styled.label
          for="undefined-textarea"
        >
          250
        </styled.label>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoFocus": undefined,
          "cols": 2,
          "data-test-id": "undefined-textarea",
          "id": "undefined-textarea",
          "maxLength": 250,
          "onBlur": [Function],
          "onChange": [Function],
          "onFocus": [Function],
          "placeholder": "Place text",
          "rows": 2,
          "title": undefined,
        },
        "ref": "textArea",
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": 250,
          "for": "undefined-textarea",
        },
        "ref": null,
        "rendered": 250,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.textarea
            autoFocus={undefined}
            cols={2}
            data-test-id="undefined-textarea"
            id="undefined-textarea"
            maxLength={250}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Place text"
            rows={2}
            title={undefined}
          />,
          <styled.label
            for="undefined-textarea"
          >
            250
          </styled.label>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoFocus": undefined,
            "cols": 2,
            "data-test-id": "undefined-textarea",
            "id": "undefined-textarea",
            "maxLength": 250,
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "placeholder": "Place text",
            "rows": 2,
            "title": undefined,
          },
          "ref": "textArea",
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": 250,
            "for": "undefined-textarea",
          },
          "ref": null,
          "rendered": 250,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
